gccida/c0/scan_rtx_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:860:41: error: must use 'enum' tag to refer to type 'reg_class'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:860:55: error: must use 'enum' tag to refer to type 'scan_actions'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:860:76: error: must use 'enum' tag to refer to type 'op_type'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                                           ^
                                                                           enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:887:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+CCh] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:932:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)*loc)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:933:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)*loc)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:1015:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)this_0->loc)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/regrename.c:1016:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)this_0->loc)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_rtx_reg/src/obj/regrename.o] Error 1
